<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecturer.ResultScreenActivity">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:padding="60dp"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="5dp"
        tools:layout_editor_absoluteX="16dp"
        card_view:contentPadding="15dp">

        <TextView
            android:id="@+id/student_name_titleview"
            android:text="@string/student_name_title"
            android:textSize="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="30dp"
            android:layout_marginLeft="120dp"
            android:text="ss"
            android:id="@+id/student_name_titleview_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_marks"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/student_marks_editview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please enter marks" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_feedback" />

            <EditText
                android:id="@+id/student_feedback_editview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Please enter feedback for student"
                android:inputType="textMultiLine" />

        </GridLayout>
        <Button
            android:id="@+id/upload_marks_button"
            android:text="@string/student_uploade"
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>


</LinearLayout>