<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecturer.LecturerHome">

    <TextView
        android:textSize="25dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/module_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/module_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="8dp"
        card_view:contentPadding="20dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="5dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintVertical_bias="0.043"
        tools:layout_editor_absoluteX="31dp">

        <TextView
            android:id="@+id/module_id_heading"
            android:textAlignment="center"
            android:text="@string/module_id_title"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            android:textAlignment="center"
            android:inputType="none"
            android:layout_marginTop="30dp"
            android:id="@+id/module_id_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/module_name_heading"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:text="@string/module_name_title"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            android:textAlignment="center"
            android:inputType="none"
            android:layout_marginTop="130dp"
            android:id="@+id/module_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/module_detail_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:text="@string/module_info_button"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/white"></Button>

    </android.support.v7.widget.CardView>
</LinearLayout>