<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.CreateModuleActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="148dp"
        android:layout_marginBottom="8dp"
        android:padding="60dp"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="5dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintVertical_bias="0.043"
        tools:layout_editor_absoluteX="31dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_name" />

            <EditText
                android:id="@+id/module_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please enter module name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_credits" />

            <EditText
                android:id="@+id/module_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please enter module credit" />
        </GridLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/module_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/module_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"></Button>

</android.support.constraint.ConstraintLayout>